# resume-moderation-ml

./: .hh-release.yaml  CODEOWNERS  README.md  files.md  pyproject.toml  run.sh
config/: frontik.cfg  models.cfg  resume-moderaion-ml.cfg  resume-moderation-ml.cfg
resume_moderation_ml/: __init__.py
resume_moderation_ml/model/: manual_rules.py  predictor.py  resume.py  text_fields.py
resume_moderation_ml/model/classifier/: __init__.py
resume_moderation_ml/model/stopwords/: __init__.py  stop_positions.txt  stop_words.txt
resume_moderation_ml/model/train/: __init__.py  bad_positions.py  config.py  dropsalary.py  environment.py  evaluate.py  fit.py  logger.py  model.py  optimize.py  source.py  targets.py  vectorize.py  vocabulary.py  xgb.py
resume_moderation_ml/model/train/utils/: __init__.py  cache.py  json_extraction.py  stats.py  text.py  threshold.py  transformers.py
resume_moderation_ml/pages/: __init__.py  resume_moderation_block_page.py  resume_moderation_page.py
tests/resume_moderation/: conftest.py  test_moderation.py  utils.py
